--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 	<head>
 		<title>NIKE 2001</title>
 	</head>
-	<body>
+	<body bgcolor="#cccccc">
 		<center><table width='80%' border=1px>
-			<tr>
+			<tr >
 				<td width='10%'colspan=2><center>Nike</center></td>
 				<td colspan=8></td>
 			</tr>
