--- a/index.html
+++ b/index.html
@@ -3,21 +3,15 @@
 		<title>NIKE 2001</title>
 	</head>
 	<body bgcolor="#cccccc">
-		<center><table width='80%' border=1px>
+		<center><table width="600" height="400" cellspacing="0" cellpadding="0" border="1" bgcolor="#666666" 		 align="center">
 			<tr >
-				<td width='10%'colspan=2><center>Nike</center></td>
-				<td colspan=8></td>
+				<td colspan="3" width="40" height="30" align="center">Nike</td>
+				<td width="511" valign="top" height="28" align="left"></td>
 			</tr>
 			<tr>
-				<td  height='15%' rowspan=5></td>
-				<td  height='15%' rowspan=5></td>
-				<td colspan=4 rowspan=5></td>
-			</tr>
-			<tr>
-			</tr>
-			<tr>
-			</tr>
-			<tr>
+				<td rowspan="3" width="20" valign="bottom" height="344" align="center"></td>
+				<td rowspan="3" width="40" valign="bottom" height="344" align="center"></td>
+				<td width="511" valign="top" height="149" align="left"><img src="Craze.jpg" alt="Presto Craze" 				width="512" height="149" border="0"></td>
 			</tr>
 		</table></center>
 	</body>
