--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 			</tr>
 			<tr>
 				<td rowspan="3" width="20" valign="bottom" height="344" align="center"></td>
-				<td rowspan="3" width="40" valign="bottom" height="344" align="center"></td>
-				<td width="511" valign="top" height="149" align="left"><img src="Craze.jpg" alt="Presto Craze" 				width="512" height="149" border="0"></td>
+				<td rowspan="3" width="40" valign="bottom" height="344" align="center" bgcolor="#ffffff"></td>
+			</tr>
+			<tr>
+				<td width="500" valign="top" height="344" align="left"><img 				src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/Craze.jpg" alt="Presto 				Craze" width="512" height="149" border="0"></td>
 			</tr>
 		</table></center>
 	</body>
