--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
 	<body bgcolor="#cccccc">
 		<center><table width="500" height="300" cellspacing="0" cellpadding="0" border="1" bgcolor="#666666" 		 align="center">
 			<tr >
-				<td colspan="2" width="50" height="20" align="center">Nike</td>
-				<td width="500" valign="top" height="28" align="left"></td>
+				<td colspan="2" width="150" height="28" align="center">Nike</td>
+				<td width="400" valign="top" height="28" align="left"></td>
 			</tr>
 			<tr>
 				<td rowspan="3" width="20" valign="bottom" height="344" align="center"></td>
-				<td rowspan="3" width="40" valign="bottom" height="344" align="center" bgcolor="#ffffff"></td>
+					<td rowspan="3" width="40" valign="bottom" height="344" align="center" bgcolor="#999999">
+						<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Si				to/Nike2001/About_Nike.gif" alt="Pres to Craze" width="20" height="90" border="0">
+					</td>
 			</tr>
 			<tr>
-				<td width="300" valign="top" height="400" align="left"><img 				src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/Craze.jpg" alt="Presto 				Craze" width="512" height="149" border="0"></td>
+				<td width="0" valign="top" height="0" align="left"><img 				src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/Craze.jpg" alt="Presto 				Craze" width="433" height="125" border="0"></td>
+			</tr>
+			<tr>
+				<table>
+					<td width="0" valign="top" height="0" align="left"><img 					src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am2.gif" 					alt="Presto Craze" width="100" height="20" border="0"></td>
+				</table>
 			</tr>
 		</table></center>
 	</body>
