--- a/index.html
+++ b/index.html
@@ -3,25 +3,44 @@
 		<title>NIKE 2001</title>
 	</head>
 	<body bgcolor="#cccccc">
-		<center><table width="500" height="300" cellspacing="0" cellpadding="0" border="1" bgcolor="#666666" 		 align="center">
+		<center><table width="500" height="300" cellspacing="0" cellpadding="0" border="1" bgcolor="#666666" align="center">
 			<tr >
 				<td colspan="2" width="150" height="28" align="center">Nike</td>
 				<td width="400" valign="top" height="28" align="left"></td>
 			</tr>
 			<tr>
-				<td rowspan="3" width="20" valign="bottom" height="344" align="center"></td>
-					<td rowspan="3" width="40" valign="bottom" height="344" align="center" bgcolor="#999999">
-						<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Si				to/Nike2001/About_Nike.gif" alt="Pres to Craze" width="20" height="90" border="0">
-					</td>
+				<td rowspan="3" width="20" valign="bottom" height="344" align="center">
+					<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/Copy_Right.gif" alt="" width="10" height="140" border="0">
+				</td>
+				<td rowspan="3" width="40" valign="bottom" height="344" align="center" bgcolor="#999999">
+					<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/About_Nike.gif" alt="Pres to Craze" width="15" height="70" border="0">
+				</td>
 			</tr>
 			<tr>
-				<td width="0" valign="top" height="0" align="left"><img 				src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/Craze.jpg" alt="Presto 				Craze" width="433" height="125" border="0"></td>
+				<td width="0" valign="top" height="0" align="left"><img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/Craze.jpg" alt="Presto Craze" width="433" height="125" border="0"></td>
 			</tr>
 			<tr>
-				<table>
-					<td width="0" valign="top" height="0" align="left"><img 					src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am2.gif" 					alt="Presto Craze" width="100" height="20" border="0"></td>
-				</table>
+				<td width="433" valign="top" height="125" align="left">
+					<table width="433" height="40" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#666666">
+						<tr>
+							<td colspan="6" width="433" height="30">
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/Space.gif" alt="" width="433" height="10" border="0">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="100" height="20" border="0">
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="100" height="20" border="0">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="100" height="20" border="0">
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="100" height="20" border="0">
+							</td>
+						</tr>
+					</table>
+				</td>
 			</tr>
-		</table></center>
 	</body>
 </html>
