--- a/index.html
+++ b/index.html
@@ -28,15 +28,90 @@
 							</td>
 						</tr>
 						<tr>
+							<td rowspan="7" width="20" valign="top" height="" align="left">
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/Space.gif" alt="" width="20" height="" border="0">
+							</td>
 							<td>
-								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="100" height="20" border="0">
-								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="100" height="20" border="0">
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="88" height="15" border="0">
+							</td>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="88" height="15" border="0">
+							</td>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="88" height="15" border="0">
+							</td>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="88" height="15" border="0">
 							</td>
 						</tr>
 						<tr>
 							<td>
-								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="100" height="20" border="0">
-								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="100" height="20" border="0">
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="88" height="15" border="0">
+							</td>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="88" height="15" border="0">
+							</td>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="88" height="15" border="0">
+							</td>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="88" height="15" border="0">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="88" height="15" border="0">
+							</td>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="88" height="15" border="0">
+							</td>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="88" height="15" border="0">
+							</td>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="88" height="15" border="0">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/Space.gif" alt="" width="88" height="15" border="0">
+							</td>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="88" height="15" border="0">
+							</td>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="88" height="15" border="0">
+							</td>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/Space.gif" alt="" width="88" height="15" border="0">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/Space.gif" alt="" width="88" height="15" border="0">
+							</td>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="88" height="15" border="0">
+							</td>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="88" height="15" border="0">
+							</td>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/Space.gif" alt="" width="88" height="15" border="0">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/Space.gif" alt="" width="88" height="15" border="0">
+							</td>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/North_Am.gif" alt="" width="88" height="15" border="0">
+							</td>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/Space.gif" alt="" width="88" height="15" border="0">
+							</td>
+							<td>
+								<img src="/Users/Genny/Desktop/Universita`/Terzo Anno/Web Design/Sito/Nike2001/Space.gif" alt="" width="88" height="15" border="0">
 							</td>
 						</tr>
 					</table>
